[package]
name = "rùnaire"
version = "0.1.0"
authors = ["Matthew Gordon <matthew@gordon.earth>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rusqlite = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["sqlite_pool", "json", "serve"]
